<resources>
    <string name="app_name">The Hungry Bunch 3.0</string>
    <string name="title_home">Menu</string>
    <string name="title_order">Cart</string>
    <string name="title_pay">Pay</string>
    <string name="title_splash">Splash</string>
    <string name="login_title">LOGIN</string>
    <string name="user">USERNAME</string>
    <string name="password">PASSWORD</string>
    <string name="login">LOGIN</string>
    <string name="create_account">Create an account</string>
    <string name="regRoomNumber">Room Number</string>
    <string name="regPhoneNumber">Phone Number</string>
    <string name="regFirstName">First Name</string>
    <string name="regLastName">Last Name</string>
    <string name="regEmail">Email</string>
    <string name="regPassword">Password</string>
    <string name="regConfirmPassword">Confirm Password</string>
    <string name="regButton">Register</string>
    <string name="navSignIn">Sign In</string>
    <string name="alreadyHaveAccount">Already Have An Account?</string>
    <string name="testNavButton">SKIP</string>
    <string name="appbar_scrolling_view_behaviour">B</string>
    <string name="Save_for_later">Save</string>
    <string name="Order_now">Order</string>
    // menu strings below
    <string name="Monday_meal">Chicken Choma and Curry Potato Wedges</string>
    <string name="Meal_Price">KES 300/=</string>
    <string name="Delivery_fee">Pickup Free or Delivery @ KES 50/=</string>
    <string name="Tuesday_meal">Coconut Bean Stew  With Rice</string>
    <string name="Wednesday_meal">Lentil Curry (ndengu) With Chapati</string>
    <string name="Thursday_meal">Beef Pilau With Kachumbari</string>
    <string name="Friday_meal">Fried Mutton With Ugali And Greens</string>
    <string name="add_items">+</string>
    <string name="reduce_quantity">-</string>
    <string name="delivery_query">Delivery?</string>
    <string name="subtotal">Subtotal:</string>
    <string name="checkout_delivery_fee">Delivery Fee:</string>
    <string name="delivery_fee">50</string>
    <string name="no_delivery_fee">0</string>
    <string name="purchase_button">Purchase</string>
    <string name="meal_chosen">Meal Chosen:</string>
    <string name="quantity_number">1</string>
    <string name="total_price">Total:</string>
    <string name="checkout_meal_chosen">%1$s</string>
    <string name="checkout_subtotal_fee">%1$.2f</string>
    <string name="checkout_total_fee">%1$.2f</string>
    <string name="quantity">Quantity</string>
    <string name="successful_order">Successful Order</string>
    <string name="order_more_food">Order More Food😋!</string>
    <string name="pay_the_amount_below">Pay The Amount Below When Your Order Arrives</string>


</resources>