<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_menu">

    <fragment
        android:id="@+id/navigation_menu"
        android:name="com.example.thehungrybunch30.ui.menu.MenuFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_menu" >
        <action
            android:id="@+id/action_navigation_home_to_navigation_dashboard"
            app:destination="@id/navigation_cart"
            app:enterAnim="@anim/registration_slide_in_from_right"
            app:exitAnim="@anim/registration_slide_out_to_right"/>
    </fragment>

    <fragment
        android:id="@+id/navigation_cart"
        android:name="com.example.thehungrybunch30.ui.cart.CartFragment"
        android:label="@string/title_order"
        tools:layout="@layout/fragment_cart" >
        <action
            android:id="@+id/action_navigation_dashboard_to_navigation_pay"
            app:destination="@id/navigation_pay"
            app:enterAnim="@anim/registration_slide_in_from_right"
            app:exitAnim="@anim/registration_slide_out_to_right"/>
        <action
            android:id="@+id/action_navigation_dashboard_to_navigation_home"
            app:destination="@id/navigation_menu"
            app:enterAnim="@anim/registration_slide_in_from_right"
            app:exitAnim="@anim/registration_slide_out_to_right"/>
    </fragment>

    <fragment
        android:id="@+id/navigation_pay"
        android:name="com.example.thehungrybunch30.ui.pay.PayFragment"
        android:label="@string/title_pay"
        tools:layout="@layout/fragment_pay" >
        <action
            android:id="@+id/action_navigation_pay_to_navigation_dashboard"
            app:destination="@id/navigation_cart"
            app:enterAnim="@anim/registration_slide_in_from_right"
            app:exitAnim="@anim/registration_slide_out_to_right"/>
    </fragment>

</navigation>